<resources>
    <string name="app_name">Samwaad</string>
    <string name="enter_email_address">Enter email address</string>
    <string name="enter_password">Enter Password</string>
    <string name="forget_password">Forget Password</string>
    <string name="login">LOGIN</string>
    <string name="do_not_have_an_account">Don\'t have an account? Sign Up</string>
    <string name="title_activity_samwaad_home">MainActivity</string>
    <string name="chat">Chat</string>
    <string name="text_hint"><b>Find new friends...</b></string>
    <string name="status">Status</string>
    <string name="user_profile">Profile</string>
    <string name="title_activity_samwaad__main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="title_activity_profile">Profile</string>
    <string name="action_settings">Settings</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="name">Name</string>
    <string name="check">Reset</string>
    <string name="register">REGISTER</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>
    <string name="or">OR</string>
    <string name="search">Search</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="password">password</string>
    <string name="user_image">user image</string>
    <string name="test_gmail_com">test@gmail.com</string>
    <string name="back_to_nhome">Back to\nHome</string>
    <string name="account_info">Account Info</string>
    <string name="matching_profiles">Matching Profiles</string>
    <string name="todo">TODO</string>
    <string name="_266_225_225">+266 225 225</string>
    <string name="forget">Forgot</string>
    <string name="reset_password">Reset Password</string>
    <string name="please_wait">Please wait ...</string>
    <string name="account_settings">Account Settings</string>
    <string name="report_a_problem">Report a problem</string>
    <string name="logout">Logout</string>
    <string name="notifications">Notifications</string>
    <string name="change_password">Change Password</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="profile">Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="enter_new_passowrd">Enter new passowrd</string>
    <string name="enter_old_password">Enter old password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="chats">Chats</string>
</resources>