<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:focusableInTouchMode="true"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <TextView
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        style="@style/viewParent"
        android:text="Register"
        android:textSize="@dimen/headerTextSize"
        android:textColor="@color/blackTextColor"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputName"
        style="@style/parent.TextLayout"
        android:layout_marginTop="@dimen/signup_text_margin_top">

        <EditText
            android:id="@+id/editTextName"
            style="@style/modifiedEditText"
            android:hint="@string/name"
            android:inputType="text"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputMobile"
        style="@style/parent.TextLayout"
        android:layout_marginTop="@dimen/signup_text_margin_top">
        <EditText
            android:id="@+id/editTextMobile"
            style="@style/modifiedEditText"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:hint="@string/login_email_hint"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputEmail"
        style="@style/parent.TextLayout"
        android:layout_marginTop="@dimen/signup_text_margin_top">
        <EditText
            android:id="@+id/editTextEmail"
            style="@style/modifiedEditText"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:hint="@string/mobile_number"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputPassword"
        style="@style/parent.TextLayout"
        android:layout_marginTop="@dimen/signup_text_margin_top">
        <EditText
            android:id="@+id/editTextPassword"
            style="@style/modifiedEditText"
            android:hint="@string/password"
            android:maxLines="1"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/user_login"
        android:layout_width="53dp"
        android:layout_height="53dp"
        android:layout_gravity="end"
        android:background="@drawable/ic_login_button"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/blackTextColor"
        android:textSize="12sp"
        android:text="Already Have an Account?\nLogin Now."/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:cropToPadding="true"
            android:src="@drawable/facebook_button" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:cropToPadding="true"
            android:src="@drawable/google_button" />
    </LinearLayout>



</LinearLayout>