<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/whiteTextColor">

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        android:src="@drawable/ic_lock_48px"
        app:tint="@color/blue" />

    <TextView
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/open_sans"
        android:gravity="center"
        android:text="@string/forget_password"
        android:textColor="@color/blue"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/open_sans"
        android:gravity="center"
        android:text="We just need your email address to sent password reset instructions."
        android:textColor="@color/blue"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/password_reset"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginRight="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="8dp"
        android:inputType="textPassword"
        android:background="@drawable/corner_circle"
        android:hint="@string/enter_email_address"
        android:fontFamily="@font/open_sans"
        android:paddingStart="16dp"
        android:drawableStart="@drawable/ic_lock_outline_black_24dp"
        android:drawablePadding="16dp"
        android:drawableTint="@color/blue"
        android:textColorHint="@color/blue"
        tools:ignore="RtlSymmetry"
        android:autofillHints="email address"
        tools:targetApi="m"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/resetPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:text="@string/change_password"
        android:fontFamily="@font/open_sans"
        android:textColor="@color/whiteTextColor"
        android:textSize="20sp"
        android:background="@drawable/corner_circle"
        android:backgroundTint="@color/blue"
        android:textStyle="bold"/>

</LinearLayout>