<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/whiteTextColor"
    tools:context=".user.ChangePassword">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:layout_marginTop="68dp"
        android:src="@drawable/ic_lock_48px"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/colorPrimar" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/open_sans_bold"
        android:gravity="center"
        android:text="@string/change_password"
        android:textColor="@color/colorPrimar"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/OldPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/corner_circle"
        android:drawableStart="@drawable/ic_lock_outline_black_24dp"
        android:drawablePadding="16dp"
        android:drawableTint="@color/colorPrimar"
        android:fontFamily="@font/open_sans"
        android:hint="@string/enter_old_password"
        android:inputType="textPassword"
        android:paddingStart="16dp"
        android:textColorHint="@color/colorPrimar"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="RtlSymmetry"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/NewPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/corner_circle"
        android:drawableStart="@drawable/ic_lock_outline_black_24dp"
        android:drawablePadding="16dp"
        android:drawableTint="@color/colorPrimar"
        android:fontFamily="@font/open_sans"
        android:hint="@string/enter_new_passowrd"
        android:inputType="textPassword"
        android:paddingStart="16dp"
        android:textColorHint="@color/colorPrimar"
        app:layout_constraintEnd_toEndOf="@+id/OldPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/OldPassword"
        tools:ignore="RtlSymmetry"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/ConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/corner_circle"
        android:drawableStart="@drawable/ic_lock_outline_black_24dp"
        android:drawablePadding="16dp"
        android:drawableTint="@color/colorPrimar"
        android:fontFamily="@font/open_sans"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:paddingStart="16dp"
        android:textColorHint="@color/colorPrimar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/NewPassword"
        app:layout_constraintTop_toBottomOf="@+id/NewPassword"
        tools:ignore="RtlSymmetry"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/ChangePass"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/corner_circle"
        android:backgroundTint="@color/colorPrimar"
        android:fontFamily="@font/open_sans"
        android:text="@string/change_password"
        android:textColor="@color/whiteTextColor"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/ConfirmPassword"
        app:layout_constraintTop_toBottomOf="@+id/ConfirmPassword" />

    <include android:id="@+id/progress_Bar1" android:layout_height="match_parent" android:layout_width="match_parent" layout="@layout/progress_bar"/>

</androidx.constraintlayout.widget.ConstraintLayout>