<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".login_to_samwaad">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/background"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:orientation="vertical"
        android:layout_centerHorizontal="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:background="@drawable/layout_background">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_9"
                    style="@style/parent.TextLayout"
                    app:hintAnimationEnabled="true"
                    app:hintEnabled="false">

                    <EditText
                        android:id="@+id/email_1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:autofillHints="no"
                        android:drawableStart="@drawable/ic_mail_outline_black_24dp"
                        android:drawablePadding="10dp"
                        android:hint="@string/login_email_hint"
                        android:inputType="textEmailAddress"
                        android:padding="20dp"
                        android:textColorHint="#606060"
                        android:textSize="14sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/parent.TextLayout"
                    app:hintEnabled="false"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:id="@+id/password_1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="20dp"
                        android:autofillHints="no"
                        android:drawableStart="@drawable/ic_lock_outline_black_24dp"
                        android:drawablePadding="10dp"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:padding="20dp"
                        android:textColorHint="#606060"
                        android:textSize="14sp" />
                </com.google.android.material.textfield.TextInputLayout>


                <TextView
                    android:id="@+id/forget_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="10dp"
                    android:gravity="end"
                    android:layout_marginEnd="20dp"
                    android:text="@string/forget_password"
                    android:textColor="@color/blackTextColor"
                    android:textStyle="bold" />

                <ImageButton
                    android:id="@+id/login_user"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="end"
                    android:layout_marginTop="70dp"
                    android:layout_marginEnd="25dp"
                    android:background="@drawable/button_background"
                    android:src="@drawable/ic_arrow_forward_black_24dp"
                    android:contentDescription="@string/login" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="70dp"
                android:gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="45dp"
                    android:text="@string/do_not_have_an_account"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginTop="10dp"
                    android:id="@+id/signup"
                    android:background="@drawable/button_background"
                    android:text="SIGN UP"
                    android:textColor="@android:color/white" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <include
        android:id="@+id/llProgressBar"
        layout="@layout/progress_bar"/>
</RelativeLayout>